--- a/environment.yml
+++ b/environment.yml
@@ -158,7 +158,7 @@ dependencies:
   - notebook
   - nspr
   - nss
-  - numba=0.53.0=py38h0573a6f_0
+  - numba=0.53.0
   - numpy-base
   - oauthlib
   - olefile
